# sber-agents

./: README.md
02-llm-api/: .env.save  Makefile  README.md  pyproject.toml
02-llm-api/reports/: report.md
02-llm-api/src/: bot.py
03-aidd/: .env.example  Makefile  README.md  pyproject.toml  report.md
03-aidd/.cursor/rules/: conventions.mdc  workflow.mdc
03-aidd/docs/: conventions.md  tasklist.md  vision.md  workflow.md
03-aidd/src/: bot.py
04-multimodal/: .env.example  .gitignore  Makefile  README.md  report.md
04-multimodal/docs/: tasklist.md  vision.md
04-multimodal/prompts/: system_prompt_image.txt  system_prompt_text.txt
04-multimodal/src/: __init__.py  bot.py  config.py  storage.py
04-multimodal/src/handlers/: __init__.py  commands.py  image.py  text.py
04-multimodal/src/services/: __init__.py  image.py  llm.py
05-rag-langchain/: .gitignore  Makefile  README.md  env.example  pyproject.toml  report.md
05-rag-langchain/data/: sberbank_help_documents.json
05-rag-langchain/docs/: idea.md  tasklist.md  vision.md
05-rag-langchain/docs/adrs/: README.md
05-rag-langchain/docs/references/: naive-rag.ipynb
05-rag-langchain/src/: bot.py  config.py  handlers.py  indexer.py  indexer_with_json.py  rag.py
06-monitoring-qa/: README.md  env.example  pyproject.toml  report.md
06-monitoring-qa/docs/: idea.md  tasklist.md  vision.md
06-monitoring-qa/docs/references/: naive-rag.ipynb
06-monitoring-qa/prompts/: query_transform.txt
06-monitoring-qa/src/: bot.py  config.py  dataset_synthesizer.py  evaluation.py  handlers.py  indexer.py  rag.py
07-advanced-rag/: Makefile  README.md  env.example  pyproject.toml  report.md
07-advanced-rag/docs/: idea.md  tasklist.md  vision.md
07-advanced-rag/docs/references/: advanced-hybrid-rag.ipynb
07-advanced-rag/prompts/: conversation_system.txt
07-advanced-rag/src/: bot.py  config.py  evaluation.py  handlers.py  indexer.py  rag.py
08-agents-langgraph/: README.md  env.example  pyproject.toml  report.md
08-agents-langgraph/docs/: idea.md  tasklist.md  vision.md
08-agents-langgraph/docs/adrs/: 001-use-uv-for-dependency-management.md
08-agents-langgraph/prompts/: agent_system.txt
08-agents-langgraph/src/: agent.py  bot.py  config.py  evaluation.py  handlers.py  indexer.py  rag.py  tools.py
09-mcp/: .gitignore  Makefile  README.md  env.example  pyproject.toml  report.md
09-mcp/docs/: idea.md  tasklist.md  vision.md
09-mcp/docs/references/: advanced-hybrid-rag.ipynb  agent.ipynb  rag-evaluation-practice.ipynb
09-mcp/mcp/mcp-bank-agent/: Makefile  README.md  pyproject.toml  server.py
09-mcp/mcp/mcp-bank-agent/data/: bank_products.json
09-mcp/prompts/: agent_system.txt
09-mcp/src/: agent.py  bot.py  config.py  evaluation.py  handlers.py  indexer.py  rag.py  tools.py
docs/: idea.md
reports/: report.md
