[project]
name = "mcp-bank-agent"
version = "0.1.0"
description = "MCP Server for bank assistant with product search and currency converter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.11.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "mcp[cli]>=1.11.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

